@@ -12,7 +12,11 @@
 
       <h1 id="label-Hello%21">Hello!</h1>
 
-    See RDoc::Markup for further details.
+    Labels for other classes or methods can be linked to by adding a %
+    following the class or method reference.  For example,
+    <tt>RDoc::Markup%Links</tt>
+
+    See RDoc::Markup%Links for further details.
   * RDoc now looks for a <tt>format: parser_name</tt> magic comment to choose
     alternate documentation formats.  The format comment must be in the first
     three lines of the file (to allow for a shebang or modeline).
